--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         <p id="msg"></p>
 
-        <textarea name="speech-msg" id="speech-msg" placeholder="Provide the text that you want listen to in this box." x-webkit-speech>
+        <textarea name="speech-msg" id="speech-msg" x-webkit-speech>
+            Provide the text that you want listen to in this box.
         </textarea>
 
         <div class="option voice">
