--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 
         <p id="msg"></p>
 
-        <textarea name="speech-msg" id="speech-msg" x-webkit-speech>
-            Provide the text that you want listen to in this box.
-        </textarea>
+        <textarea name="speech-msg" id="speech-msg" x-webkit-speech>Provide the text that you want to listen to in this box.</textarea>
 
         <div class="option voice">
             <label for="voice">Voice</label>
